@@ -220,6 +220,7 @@ Version 1.9.0-svn:
    * Added more command line arguments for starting a campaign + scenario
    * Added command line "--preprocess" to preprocess a specified file/folder and
      output the result
+   * Added command line "--preprocess-input-macros" to specify extra input macros
    * Added command line "--preprocess-output-macros" to output the preprocessed
      macros to a file
    * Added command line "--data-dir" to explicitly override the data directory
